# Ram

./: .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: main.cpp.8E63F98EEBB5153D.idx  nauty.h.A1FC4519D9528954.idx
graphs/: T1.adj  T2.adj
src/: CanonicalAugmentation.cpp  CanonicalAugmentation.h  EdgeColoredUndirectedGraph.cpp  EdgeColoredUndirectedGraph.h  GraphUtils.cpp  GraphUtils.h  Utils.cpp  Utils.h  k61.h  k62.h  main.cpp
